feat: enhance LocalFileStorage with improved error handling and unique filename generation; add contract tests for FileStorage implementations